@@ -37,6 +37,7 @@ Installation can be done using the following command::
 
 > pip install --user OApackage
 
+To compile the package you need Python, Numpy and Swig 3.x.
 
 The binary tools have been tested using Linux, Windows XP/Win7 (using Cygwin and Visual Studio).
 The program uses a cmake build system. From the commandline type::
